salesforce/force-app/main/default/objects/Opportunity/fields/Days_In_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Stage__c</fullName>
    <description>Number of days the opportunity has been in its current sales stage.</description>
    <label>Days In Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>