salesforce/force-app/main/default/objects/Opportunity/fields/Expansion_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Candidate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this opportunity represents an expansion motion.</description>
    <label>Expansion Candidate</label>
    <type>Checkbox</type>
</CustomField>