salesforce/force-app/main/default/objects/Opportunity/fields/Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this opportunity represents a renewal motion.</description>
    <label>Renewal Opportunity</label>
    <type>Checkbox</type>
</CustomField>